--- a/stylesPWS/style.css
+++ b/stylesPWS/style.css
@@ -1,16 +1,99 @@
 @charset "utf-8";
 * 						{margin: 0; padding: 0;}
-body						{font: 16px Georgia, serif;}
+body {
+	font: 16px Georgia, serif;
+}
 
-#page-wrap				{margin: 2% auto; color: white;}
-#page-wrap >.main 		{border: 1px solid #999; padding: 1%;
-						 margin-bottom: 1px; color: black;}
+#page-wrap {
+	margin: 2% auto; 
+	color: white;
+}
 
-section > div				{padding: 20px;}
-header, nav, section		{background: #eee; text-align: center;}
-footer					{background: #eee; text-align: center;}
-nav span             			{ margin: 0px 10px 0px 0px;
-						width: 100%;
-						display: inline-block;}
+#page-wrap >.main {
+	border: 1px solid #999; 
+	padding: 1%;
+	margin-bottom: 1px; 
+	color: black;
+}
 
-#ErrorMsgs          		 { color: #f61; font-size: smaler}
+section > div {
+	padding: 20px;
+}
+
+header, nav, section {
+	background: #eee; 
+	text-align: center;
+}
+
+footer {
+	background: #eee; 
+	text-align: center;
+}
+
+nav span {
+	margin: 0px 10px 0px 0px;
+	width: 100%;
+	display: inline-block;
+}
+
+#ErrorMsgs {
+	color: #f61; 
+	font-size: smaler
+}
+
+a {
+	color: black;
+}
+
+b {
+	font: 40px Georgia, serif;
+}
+
+header, footer {
+	background-color: #79d279;
+}
+
+section {
+	background-color: #c6ecc6;
+}
+
+nav {
+	background-color: #9fdf9f;
+}
+
+
+
+.hutsuneak {
+	width: 215px;
+}
+
+.specialButton {
+	background-color: #32CD32;
+    color: white;
+	font: 22px Georgia, serif;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+	pointer-events: none;
+	width: 300px;
+}
+.specialButton:hover {
+	color: white;
+}
+.specialButton2 {
+	background-color: #32CD32;
+    color: white;
+	font: 22px Georgia, serif;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+	width: 300px;
+}
+.specialButton2:hover {
+	color: white;
+}
+
+
+
